# smoothlife

./: .gitignore  CMakeLists.txt  LICENCE.md  LICENSE  README.md
src/: main.cpp  scene.cpp  scene.h
